--- a/tabbycat/utils/locale/ja/LC_MESSAGES/django.po
+++ b/tabbycat/utils/locale/ja/LC_MESSAGES/django.po
@@ -16,15 +16,15 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=1; plural=(n > 1);\n"
 
 #: utils/forms.py:55
 msgid "E-mail address"
-msgstr ""
+msgstr "Ｅメールアドレス"
 
 #: utils/tables.py:38
 msgid "No Data Available"
-msgstr ""
+msgstr "使用可能データなし"
 
 #: utils/tables.py:143
 msgid "Ⓒ"
@@ -36,199 +36,199 @@ msgstr ""
 
 #: utils/tables.py:148
 msgid "chair"
-msgstr ""
+msgstr "チェア"
 
 #: utils/tables.py:149
 msgid "panellist"
-msgstr ""
+msgstr "パネリスト"
 
 #: utils/tables.py:150
 msgid "trainee"
-msgstr ""
+msgstr "トレイニー"
 
 #: utils/tables.py:194 utils/tables.py:200
 #, python-format
 msgid "View %(adj)s's Adjudication Record"
-msgstr ""
+msgstr "%(adj)sの記録を見る"
 
 #: utils/tables.py:210 utils/tables.py:215
 #, python-format
 msgid "View %(team)s's Team Record"
-msgstr ""
+msgstr "%(team)sの記録を見る"
 
 #: utils/tables.py:242
 #, python-format
 msgid "%(team)s won"
-msgstr ""
+msgstr "%(team)s 勝利"
 
 #: utils/tables.py:247
 #, python-format
 msgid "%(team)s lost"
-msgstr ""
+msgstr "%(team)s 敗北"
 
 #: utils/tables.py:252 utils/tables.py:280 utils/tables.py:298
 #, python-format
 msgid "%(team)s—no result"
-msgstr ""
+msgstr "%(team)s 結果なし"
 
 #: utils/tables.py:260
 #, python-format
 msgid "%(team)s took 1st"
-msgstr ""
+msgstr "%(team)s 1位"
 
 #: utils/tables.py:265
 #, python-format
 msgid "%(team)s took 2nd"
-msgstr ""
+msgstr "%(team)s 2位"
 
 #: utils/tables.py:270
 #, python-format
 msgid "%(team)s took 3rd"
-msgstr ""
+msgstr "%(team)s 3位"
 
 #: utils/tables.py:275
 #, python-format
 msgid "%(team)s took 4th"
-msgstr ""
+msgstr "%(team)s 4位"
 
 #: utils/tables.py:288
 #, python-format
 msgid "%(team)s is advancing"
-msgstr ""
+msgstr "%(team)sは次の試合に進出"
 
 #: utils/tables.py:293
 #, python-format
 msgid "%(team)s was eliminated"
-msgstr ""
+msgstr "%(team)sはこの試合で敗退"
 
 #: utils/tables.py:311
 #, python-format
 msgid " vs %(opposition)s"
-msgstr ""
+msgstr " 対 %(opposition)s"
 
 #: utils/tables.py:317
 #, python-format
 msgid "Won against %(team)s"
-msgstr ""
+msgstr "%(team)sに勝利"
 
 #: utils/tables.py:319
 #, python-format
 msgid "Lost to %(team)s"
-msgstr ""
+msgstr "%(team)sに敗北"
 
 #: utils/tables.py:321
 #, python-format
 msgid "No result for debate against %(team)s"
-msgstr ""
+msgstr "%(team)sとの対戦に関する結果なし"
 
 #: utils/tables.py:326 utils/tables.py:391
 #, python-format
 msgid "Received <strong>%s</strong> team points"
-msgstr ""
+msgstr "チームスコア<strong>%s</strong>点を獲得"
 
 #: utils/tables.py:330 utils/tables.py:395
 msgid "View debate ballot"
-msgstr ""
+msgstr "このラウンドのスコアシートを見る"
 
 #: utils/tables.py:334
 #, python-format
 msgid "Speakers in <strong>%(opp)s</strong>: %(speakers)s"
-msgstr ""
+msgstr "<strong>%(opp)s</strong>のスピーカー: %(speakers)s"
 
 #: utils/tables.py:348
 msgid "Teams in debate:"
-msgstr ""
+msgstr "この試合のチーム"
 
 #: utils/tables.py:351
 #, python-format
 msgid "%(team)s (%(side)s)"
-msgstr ""
+msgstr "%(team)s (%(side)s)"
 
 #: utils/tables.py:369
 msgid "advancing"
-msgstr ""
+msgstr "次の試合に進出"
 
 #: utils/tables.py:370
 msgid "Advancing"
-msgstr ""
+msgstr "次の試合に進出"
 
 #: utils/tables.py:372
 msgid "eliminated"
-msgstr ""
+msgstr "敗退"
 
 #: utils/tables.py:373
 msgid "Eliminated"
-msgstr ""
+msgstr "敗退"
 
 #: utils/tables.py:376 utils/tables.py:386
 msgid "No result for debate"
-msgstr ""
+msgstr "試合結果なし"
 
 #: utils/tables.py:379
 msgid "4th"
-msgstr ""
+msgstr "4位"
 
 #: utils/tables.py:379
 msgid "3rd"
-msgstr ""
+msgstr "3位"
 
 #: utils/tables.py:379
 msgid "2nd"
-msgstr ""
+msgstr "2位"
 
 #: utils/tables.py:379
 msgid "1st"
-msgstr ""
+msgstr "1位"
 
 #: utils/tables.py:383
 #, python-format
 msgid "Took %(place)s"
-msgstr ""
+msgstr "%(place)s位"
 
 #: utils/tables.py:400 utils/tables.py:402
 msgid "Tournament"
-msgstr ""
+msgstr "大会"
 
 #: utils/tables.py:409 utils/tables.py:411
 msgid "Round"
-msgstr ""
+msgstr "ラウンド"
 
 #: utils/tables.py:429 utils/tables.py:596
 msgid "Name"
-msgstr ""
+msgstr "名前"
 
 #: utils/tables.py:434 utils/tables.py:436 utils/tables.py:572
 #: utils/tables.py:574
 msgid "Institution"
-msgstr ""
+msgstr "大学"
 
 #: utils/tables.py:442
 msgid "Member of the Adjudication Core"
-msgstr ""
+msgstr "Adjudicator Coreのメンバー"
 
 #: utils/tables.py:449
 msgid "Independent Adjudicator"
-msgstr ""
+msgstr "Independentジャッジ"
 
 #: utils/tables.py:457
 msgid "Always Trainee"
-msgstr ""
+msgstr "常にトレイニー"
 
 #: utils/tables.py:462
 msgid "Adjs"
-msgstr ""
+msgstr "ジャッジ"
 
 #: utils/tables.py:519
 msgid "Debate Adjudicators"
-msgstr ""
+msgstr "この試合を見たジャッジ"
 
 #: utils/tables.py:538
 msgid "Motion"
-msgstr ""
+msgstr "モーション"
 
 #: utils/tables.py:541
 msgid "Order"
-msgstr ""
+msgstr "順"
 
 #: utils/tables.py:543
 msgid "Order as listed"
@@ -236,11 +236,11 @@ msgstr ""
 
 #: utils/tables.py:564
 msgid "Team"
-msgstr ""
+msgstr "チーム"
 
 #: utils/tables.py:568 utils/tables.py:618
 msgid "Categories"
-msgstr ""
+msgstr "カテゴリ"
 
 #: utils/tables.py:583 utils/tables.py:585 utils/tables.py:659
 #: utils/tables.py:661
@@ -253,7 +253,7 @@ msgstr ""
 
 #: utils/tables.py:616
 msgid "Category"
-msgstr ""
+msgstr "カテゴリ"
 
 #: utils/tables.py:643
 #, python-format
@@ -267,67 +267,67 @@ msgstr ""
 
 #: utils/tables.py:674 utils/tables.py:676
 msgid "Venue"
-msgstr ""
+msgstr "部屋"
 
 #: utils/tables.py:682
 msgid "Date"
-msgstr ""
+msgstr "日付"
 
 #: utils/tables.py:682
 msgid "Time"
-msgstr ""
+msgstr "時間"
 
 #: utils/tables.py:686
 msgid "Bye"
-msgstr ""
+msgstr "さようなら"
 
 #: utils/tables.py:688
 msgid "Postponed"
-msgstr ""
+msgstr "延期"
 
 #: utils/tables.py:690
 msgid "Forfeit"
-msgstr ""
+msgstr "没収"
 
 #: utils/tables.py:711
 #, python-format
 msgid "Teams have met once"
 msgid_plural "Teams have met %(count)d times"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "既に%(count)d回対戦しています"
+msgstr[1] "既に%(count)d回対戦しています"
 
 #: utils/tables.py:717
 msgid "Teams are from the same institution"
-msgstr ""
+msgstr "チーム同士の所属大学が同じです"
 
 #: utils/tables.py:723
 msgid "Conflicts/Flags"
-msgstr ""
+msgstr "コンフリクト/フラグ"
 
 #: utils/tables.py:767 utils/tables.py:777
 msgid "Ballot"
-msgstr ""
+msgstr "スコアシート"
 
 #: utils/tables.py:771
 msgid "View/Edit Ballot"
-msgstr ""
+msgstr "スコアシートの確認/編集"
 
 #: utils/tables.py:786
 msgid "View Ballot"
-msgstr ""
+msgstr "スコアシートを見る"
 
 #: utils/tables.py:793
 msgid "Result"
-msgstr ""
+msgstr "結果"
 
 #. Translators: "TBC" stands for "to be confirmed".
 #: utils/tables.py:798
 msgid "TBC"
-msgstr ""
+msgstr "確認中"
 
 #: utils/tables.py:799
 msgid "Side"
-msgstr ""
+msgstr "サイド"
 
 #: utils/tables.py:837
 #, python-format
