--- a/tabbycat/locale/ja/LC_MESSAGES/django.po
+++ b/tabbycat/locale/ja/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,36 +20,38 @@ msgstr ""
 
 #: templates/admin/delete_protected_message.html:4
 msgid "You need to delete the above objects first."
-msgstr ""
+msgstr "先に上のオブジェクトを削除してください。"
 
 #: templates/admin/style_guide.html:30
 msgid ""
 "This style of info card announces critical information. <a href=\"\">Link</"
 "a>."
 msgstr ""
+"この形式のinfo cardには重要な情報が含まれます。<a href=\"\">リンク</a>。"
 
 #: templates/admin/style_guide.html:33
 msgid "This style of info card announces general <a href=\"\">information</a>."
 msgstr ""
+"この形式のinfo cardには一般的なな情報が含まれます。<a href=\"\">リンク</a>。"
 
 #: templates/admin/style_guide.html:158
 msgctxt "page title"
 msgid "Form Title"
-msgstr ""
+msgstr "フォームタイトル"
 
 #: templates/admin/style_guide.html:159
 msgid "Sub Title Title"
-msgstr ""
+msgstr "サブタイトル"
 
 #: templates/admin/style_guide.html:195 templates/registration/login.html:61
 msgctxt "button"
 msgid "Log In"
-msgstr ""
+msgstr "ログイン"
 
 #: templates/admin/style_guide.html:196 templates/registration/login.html:62
 msgctxt "button"
 msgid "I forgot my password"
-msgstr ""
+msgstr "パスワードを忘れた"
 
 #: templates/base.html:12
 #, python-format
@@ -57,20 +59,24 @@ msgid ""
 "The tab for %(tournament_name)s runs on Tabbycat, an open-source tab system "
 "for a variety of parliamentary debating formats"
 msgstr ""
+"%(tournament_name)sのタブには、様々な英国議会式ディベートの形式に対応した"
+"オープンソースのタブシステムであるTabbycatを用いています。"
 
 #: templates/base.html:16
 msgid ""
 "This tab runs on Tabbycat, an open-source tab system for a variety of "
 "parliamentary debating formats"
 msgstr ""
+"この大会のタブには、様々な英国議会式ディベートの形式に対応した"
+"オープンソースのタブシステムであるTabbycatを用いています。"
 
 #: templates/base_formset.html:26
 msgid "Save and Add More"
-msgstr ""
+msgstr "保存して新たに追加"
 
 #: templates/components/form-errors.html:4
 msgid "Whoops! There was an error with one or more fields"
-msgstr ""
+msgstr "フォームに誤りがあります！"
 
 #: templates/footer.html:13
 #, python-format
@@ -86,6 +92,8 @@ msgid ""
 "Tabbycat is an open-source project developed by volunteers, and is free to "
 "use for tabbing non-profit, non-fundraising tournaments."
 msgstr ""
+"Tabbycatはオープンソースのプロジェクトでボランティアによって開発されており、"
+"非営利の大会でのタブに無料で利用することができます。"
 
 #: templates/footer.html:25
 #, python-format
@@ -93,10 +101,11 @@ msgid ""
 "For a tournament of this size, we suggest a donation of <strong>$%(amount)s</"
 "strong>."
 msgstr ""
+"この規模の大会では、<strong>$%(amount)s</strong>の寄付をお勧めします。"
 
 #: templates/footer.html:29
 msgid "Learn more about donating."
-msgstr ""
+msgstr "寄付について詳しく知る。"
 
 #: templates/footer.html:33
 #, python-format
@@ -104,10 +113,12 @@ msgid ""
 "<a href=\"%(donations_link)s\">Donations to Tabbycat from individuals or "
 "organisations</a> are much appreciated."
 msgstr ""
+"<a href=\"%(donations_link)s\">Tabbycatへの寄付</a>にご理解とご協力を"
+"お願いいたします。"
 
 #: templates/footer.html:41
 msgid "Still timing debates with the stopwatch app?"
-msgstr ""
+msgstr "まだ、ストップウォッチアプリを使っているのですか？"
 
 #: templates/footer.html:43
 #, python-format
@@ -119,10 +130,16 @@ msgid ""
 "debatekeeper&referrer=utm_source%%3Dtabbycat%%26utm_medium%%3Dfooter"
 "\">Debatekeeper</a> (Android)."
 msgstr ""
+"タイムキーピングをしてくれるアプリを使ってみませんか？"
+"詳しくは<a href=\"https://itunes.apple.com/app/apple-store/"
+"id1156065589?pt=814172&ct=Tabbycat%%20Installs&mt=8\">Timekept</a> (iPhone/"
+"iPad) もしくは<a href=\"https://play.google.com/store/apps/details?id=net.czlee."
+"debatekeeper&referrer=utm_source%%3Dtabbycat%%26utm_medium%%3Dfooter"
+"\">Debatekeeper</a> (Android)."
 
 #: templates/footer.html:52
 msgid "Need ballots?"
-msgstr ""
+msgstr "スコアシートが必要？"
 
 #: templates/footer.html:54
 msgid ""
@@ -132,32 +149,32 @@ msgstr ""
 
 #: templates/footer.html:67
 msgid "GitHub"
-msgstr ""
+msgstr "GitHub"
 
 #: templates/footer.html:73
 msgid "Documentation"
-msgstr ""
+msgstr "ドキュメント"
 
 #: templates/footer.html:79
 msgid "Support"
-msgstr ""
+msgstr "このソフトを支援"
 
 #: templates/footer.html:85
 msgid "Facebook"
-msgstr ""
+msgstr "Facebook"
 
 #: templates/footer.html:91
 msgid "Set Up A Copy"
-msgstr ""
+msgstr "コピーをセットアップ"
 
 #: templates/nav/admin_nav.html:42 templates/nav/admin_nav.html:110
 #: templates/nav/admin_nav.html:141 templates/nav/admin_nav.html:191
 msgid "Overview"
-msgstr ""
+msgstr "概要"
 
 #: templates/nav/admin_nav.html:50
 msgid "Setup"
-msgstr ""
+msgstr "セットアップ"
 
 #: templates/nav/admin_nav.html:57
 msgid "Configuration"
@@ -417,12 +434,12 @@ msgstr ""
 #. Translators: This text appears on a button that takes the user back to the login page from the password reset page.
 #: templates/registration/password_reset_done.html:26
 msgid "Return to the login page"
-msgstr ""
+msgstr "ログインページに戻る"
 
 #: templates/registration/password_reset_email.html:2
 #, python-format
 msgid "Hi, %(username)s!"
-msgstr ""
+msgstr "こんにちは、%(username)s！"
 
 #: templates/registration/password_reset_email.html:6
 #, python-format
@@ -483,16 +500,16 @@ msgstr ""
 
 #: urls.py:87
 msgid "Later! You were logged out!"
-msgstr ""
+msgstr "さようなら！ログアウトしました！"
 
 #: urls.py:94
 #, python-format
 msgid "Hi, %(username)s — you just logged in!"
-msgstr ""
+msgstr "こんにちは、%(username)s！ログインしました！"
 
 #: urls.py:97
 msgid "Welcome! You just logged in!"
-msgstr ""
+msgstr "ようこそ！ログインしました！"
 
 #: users/admin.py:19
 msgid ""
