--- a/tabbycat/adjfeedback/locale/ja/LC_MESSAGES/django.po
+++ b/tabbycat/adjfeedback/locale/ja/LC_MESSAGES/django.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: adjfeedback/admin.py:83
 msgid "Source"
-msgstr ""
+msgstr "提出者"
 
 #: adjfeedback/admin.py:101
 #, python-format
@@ -31,7 +31,12 @@ msgid_plural ""
 "%(count)d feedback submissions were marked as confirmed. Note that this may "
 "have caused other feedback submissions to be marked as unconfirmed."
 msgstr[0] ""
+"1つのエバリュエーションシートが「確認済」とマークされました。これにより、"
+"他のエバリュエーションシートが「未確認」とマークされることがあります。"
 msgstr[1] ""
+"%(count)dつのエバリュエーションシートが「確認済」とマークされました。"
+"これにより、他のエバリュエーションシートが「未確認」とマークされることが"
+"あります。"
 
 #: adjfeedback/admin.py:113
 #, python-format
@@ -43,34 +48,40 @@ msgid_plural ""
 "because other feedback submissions that conflict with them were also marked "
 "as confirmed."
 msgstr[0] ""
+"1つのエバリュエーションシートを「確認済」とマークできませんでした。おそらく"
+"「確認済」とマークされている他のエバリュエーションシートと競合していることが"
+"原因です。"
 msgstr[1] ""
+"%(count)dつのエバリュエーションシートを「確認済」とマークできませんでした。"
+"おそらく「確認済」とマークされている他のエバリュエーションシートと競合している"
+"ことが原因です。"
 
 #: adjfeedback/admin.py:126
 #, python-format
 msgid "1 feedback submission was marked as unconfirmed."
 msgid_plural "%(count)d feedback submissions were marked as unconfirmed."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1つのエバリュエーションシートを「未確認」とマークしました。"
+msgstr[1] "%(count)dつのエバリュエーションシートを「未確認」とマークしました。"
 
 #: adjfeedback/apps.py:7
 msgid "Adjudicator Feedback"
-msgstr ""
+msgstr "ジャッジエバリュエーション"
 
 #: adjfeedback/forms.py:22
 msgid "chair"
-msgstr ""
+msgstr "チェア"
 
 #: adjfeedback/forms.py:23
 msgid "solo"
-msgstr ""
+msgstr "一人"
 
 #: adjfeedback/forms.py:24
 msgid "panellist"
-msgstr ""
+msgstr "パネリスト"
 
 #: adjfeedback/forms.py:25
 msgid "trainee"
-msgstr ""
+msgstr "トレイニー"
 
 #. Translators: Please leave this blank, it should be left for the base Django translations.
 #: adjfeedback/forms.py:53
@@ -90,218 +101,223 @@ msgstr ""
 #: adjfeedback/forms.py:165
 #, python-format
 msgid "Overall score (%(min)d=worst; %(max)d=best)"
-msgstr ""
+msgstr "総合点（%(min)d点が最低、%(max)d点が最高）"
 
 #. Translators: e.g. "Megan Pearson (Round 2 chair)", with round="Round 2", adjpos="chair"
 #. Translators: e.g. "Megan Pearson (Round 3 panellist)", with round="Round 3", adjpos="panellist"
 #: adjfeedback/forms.py:227 adjfeedback/forms.py:284
 #, python-format
 msgid "%(name)s (%(round)s %(adjpos)s)"
-msgstr ""
+msgstr "%(name)s（%(round)s %(adjpos)s）"
 
 #: adjfeedback/forms.py:244 adjfeedback/forms.py:305
 msgid "-- Adjudicators --"
-msgstr ""
+msgstr "--ジャッジ--"
 
 #: adjfeedback/forms.py:258
 msgid "Adjudicator this feedback is about"
-msgstr ""
+msgstr "このエバリュエーションシートのジャッジ"
 
 #: adjfeedback/forms.py:281
 #, python-format
 msgid "%(name)s (%(round)s)"
-msgstr ""
+msgstr "%(name)s（%(round)s）"
 
 #: adjfeedback/forms.py:287
 #, python-format
 msgid "%(name)s (%(round)s — chair gave oral)"
-msgstr ""
+msgstr "%(name)s（%(round)s チェアがR4Dを説明）"
 
 #: adjfeedback/forms.py:289
 #, python-format
 msgid "%(name)s (%(round)s — chair rolled, this panellist gave oral)"
-msgstr ""
+msgstr "%(name)s（%(round)s チェアがロールされ、このパネリストがR4Dを説明）"
 
 #: adjfeedback/models.py:13 adjfeedback/models.py:209
 msgid "adjudicator"
-msgstr ""
+msgstr "ジャッジ"
 
 #: adjfeedback/models.py:16
 msgid "round"
-msgstr ""
+msgstr "ラウンド"
 
 #: adjfeedback/models.py:17 adjfeedback/models.py:210
 msgid "score"
-msgstr ""
+msgstr "スコア"
 
 #: adjfeedback/models.py:18
 msgid "timestamp"
-msgstr ""
+msgstr "タイムスタンプ"
 
 #: adjfeedback/models.py:21
 msgid "adjudicator test score history"
-msgstr ""
+msgstr "ジャッジテストスコア履歴"
 
 #: adjfeedback/models.py:22
 msgid "adjudicator test score histories"
-msgstr ""
+msgstr "ジャッジテストスコア履歴"
 
 #: adjfeedback/models.py:30
 msgid "question"
-msgstr ""
+msgstr "質問"
 
 #: adjfeedback/models.py:32
 msgid "feedback"
-msgstr ""
+msgstr "エバリュエーション"
 
 #: adjfeedback/models.py:43 adjfeedback/models.py:51 adjfeedback/models.py:59
 #: adjfeedback/models.py:67
 msgid "answer"
-msgstr ""
+msgstr "回答"
 
 #: adjfeedback/models.py:46
 msgid "adjudicator feedback boolean answer"
-msgstr ""
+msgstr "ジャッジエバリュエーション（はい・いいえで回答）"
 
 #: adjfeedback/models.py:47
 msgid "adjudicator feedback boolean answers"
-msgstr ""
+msgstr "ジャッジエバリュエーション（はい・いいえで回答）"
 
 #: adjfeedback/models.py:54
 msgid "adjudicator feedback integer answer"
-msgstr ""
+msgstr "ジャッジエバリュエーション（整数値で回答）"
 
 #: adjfeedback/models.py:55
 msgid "adjudicator feedback integer answers"
-msgstr ""
+msgstr "ジャッジエバリュエーション（整数値で回答）"
 
 #: adjfeedback/models.py:62
 msgid "adjudicator feedback float answer"
-msgstr ""
+msgstr "ジャッジエバリュエーション（小数値で回答）"
 
 #: adjfeedback/models.py:63
 msgid "adjudicator feedback float answers"
-msgstr ""
+msgstr "ジャッジエバリュエーション（小数値で回答）"
 
 #: adjfeedback/models.py:70
 msgid "adjudicator feedback string answer"
-msgstr ""
+msgstr "ジャッジエバリュエーション（テキストで回答）"
 
 #: adjfeedback/models.py:71
 msgid "adjudicator feedback string answers"
-msgstr ""
+msgstr "ジャッジエバリュエーション（テキストで回答）"
 
 #: adjfeedback/models.py:89
 msgid "checkbox"
-msgstr ""
+msgstr "チェックボックス"
 
 #: adjfeedback/models.py:90
 msgid "yes/no (dropdown)"
-msgstr ""
+msgstr "はい・いいえ（ドロップダウン）"
 
 #: adjfeedback/models.py:91
 msgid "integer (textbox)"
-msgstr ""
+msgstr "整数値（テキストボックス）"
 
 #: adjfeedback/models.py:92
 msgid "integer scale"
-msgstr ""
+msgstr "整数値目盛"
 
 #: adjfeedback/models.py:93
 msgid "float"
-msgstr ""
+msgstr "小数値"
 
 #: adjfeedback/models.py:94 adjfeedback/models.py:127
 msgid "text"
-msgstr ""
+msgstr "テキスト"
 
 #: adjfeedback/models.py:95
 msgid "long text"
-msgstr ""
+msgstr "長いテキスト"
 
 #: adjfeedback/models.py:96
 msgid "select one"
-msgstr ""
+msgstr "択一選択"
 
 #: adjfeedback/models.py:97
 msgid "select multiple"
-msgstr ""
+msgstr "複数選択"
 
 #: adjfeedback/models.py:123
 msgid "tournament"
-msgstr ""
+msgstr "大会"
 
 #: adjfeedback/models.py:125
 msgid "sequence number"
-msgstr ""
+msgstr "連番"
 
 #: adjfeedback/models.py:128
 msgid ""
 "The question displayed to participants, e.g., \"Did you agree with the "
 "decision?\""
 msgstr ""
+"参加者に表示される質問 例：「ジャッジの判定に納得しましたか？」"
 
 #: adjfeedback/models.py:130
 msgid "name"
-msgstr ""
+msgstr "名前"
 
 #: adjfeedback/models.py:131
 msgid "A short name for the question, e.g., \"Agree with decision\""
-msgstr ""
+msgstr "質問の略称 例：「判定に納得」"
 
 #: adjfeedback/models.py:133
 msgid "reference"
-msgstr ""
+msgstr "参照名"
 
 #: adjfeedback/models.py:134
 msgid "Code-compatible reference, e.g., \"agree_with_decision\""
-msgstr ""
+msgstr "ソースコード互換の名称 例：\"hantei_ni_nattoku\""
 
 #: adjfeedback/models.py:137
 msgid "from adjudicator"
-msgstr ""
+msgstr "ジャッジから"
 
 #: adjfeedback/models.py:138
 msgid "Adjudicators should be asked this question (about other adjudicators)"
-msgstr ""
+msgstr "ジャッジからのエバリュエーションシートに記入される質問です"
 
 #: adjfeedback/models.py:140
 msgid "from team"
-msgstr ""
+msgstr "チームから"
 
 #: adjfeedback/models.py:141
 msgid "Teams should be asked this question"
-msgstr ""
+msgstr "チームからのエバリュエーションシートに記入される質問です"
 
 #: adjfeedback/models.py:144
 msgid "answer type"
-msgstr ""
+msgstr "回答タイプ"
 
 #: adjfeedback/models.py:146
 msgid "required"
-msgstr ""
+msgstr "必須回答"
 
 #: adjfeedback/models.py:149
 msgid "minimum value"
-msgstr ""
+msgstr "最小値"
 
 #: adjfeedback/models.py:150
 msgid ""
 "Minimum allowed value for numeric fields (ignored for text or boolean fields)"
 msgstr ""
+"数値で回答する質問で回答できる値の最大値（テキスト、二者択一回答の質問の場合、"
+"この値は無視）"
 
 #: adjfeedback/models.py:152
 msgid "maximum value"
-msgstr ""
+msgstr "最大値"
 
 #: adjfeedback/models.py:153
 msgid ""
 "Maximum allowed value for numeric fields (ignored for text or boolean fields)"
 msgstr ""
+"数値で回答する質問で回答できる値の最大値（テキスト、二者択一回答の質問の場合、"
+"この値は無視）"
 
 #: adjfeedback/models.py:155
 msgid "choices"
-msgstr ""
+msgstr "選択肢"
 
 #: adjfeedback/models.py:156
 #, python-format
@@ -309,58 +325,62 @@ msgid ""
 "Permissible choices for select one/multiple fields, separated by %r (ignored "
 "for other fields)"
 msgstr ""
+"択一選択、複数選択欄で表示される選択肢、%rで選択肢を分割して入力"
 
 #: adjfeedback/models.py:160
 msgid "adjudicator feedback question"
-msgstr ""
+msgstr "ジャッジエバリュエーションの質問"
 
 #: adjfeedback/models.py:161
 msgid "adjudicator feedback questions"
-msgstr ""
+msgstr "ジャッジエバリュエーションの質問"
 
 #: adjfeedback/models.py:214
 msgid "source adjudicator"
-msgstr ""
+msgstr "提出ジャッジ"
 
 #: adjfeedback/models.py:216
 msgid "source team"
-msgstr ""
+msgstr "提出チーム"
 
 #: adjfeedback/models.py:220
 msgid "adjudicator feedback"
-msgstr ""
+msgstr "ジャッジエバリュエーション"
 
 #: adjfeedback/models.py:221
 msgid "adjudicator feedbacks"
-msgstr ""
+msgstr "ジャッジエバリュエーション"
 
 #: adjfeedback/models.py:266
 msgid "Either the source adjudicator or source team wasn't specified."
-msgstr ""
+msgstr "提出ジャッジまたは提出チームが選択されていません。"
 
 #: adjfeedback/models.py:269
 msgid "There was both a source adjudicator and a source team."
-msgstr ""
+msgstr "提出ジャッジと提出チームが同時に選択されています。"
 
 #: adjfeedback/models.py:271
 msgid "Adjudicator did not see this debate."
-msgstr ""
+msgstr "このジャッジはこの試合でジャッジをしていません。"
 
 #: adjfeedback/templates/enter_feedback.html:26
 msgid ""
 "There are some problems with this feedback submission. Please review and "
 "correct them."
 msgstr ""
+"エバリュエーションシートに誤りがあります。もう一度確認し、誤りを訂正して"
+"下さい。"
 
 #: adjfeedback/templates/feedback_by_source.html:12
 #, python-format
 msgid "%(source_name)s hasn't submitted any feedback yet."
-msgstr ""
+msgstr "%(source_name)sからのエバリュエーションシートは提出されていません。"
 
 #: adjfeedback/templates/feedback_by_source.html:17
 #, python-format
 msgid "%(source_name)s hasn't received any feedback yet."
 msgstr ""
+"%(source_name)sへのエバリュエーションシートはまだ提出されていません。"
 
 #: adjfeedback/templates/feedback_overview.html:10
 #, python-format
@@ -369,6 +389,8 @@ msgid ""
 "configuration</a> allows and expects only chairs to submit feedback (on "
 "their panellists and trainees)."
 msgstr ""
+"現在の<a href=\"%(option_url)s\" class=\"alert-link\">フィードバック "
+"configuration</a> allows and expects only chairs to submit feedback (on "
 
 #: adjfeedback/templates/feedback_overview.html:14
 #, python-format
